@@ -346,7 +346,12 @@ public class TraktTv {
       seen.title = tmmMovie.getTitle();
       seen.imdb_id = tmmMovie.getImdbId();
       seen.tmdb_id = tmmMovie.getTmdbId();
-      seen.year = Integer.valueOf(tmmMovie.getYear());
+      try {
+        seen.year = Integer.valueOf(tmmMovie.getYear());
+      }
+      catch (Exception e) {
+        seen.year = 0;
+      }
       seenMovies.add(seen); // add to lib
     }
     if (nosync > 0) {
